; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_os_mswin.c_can_end_termcap_mode.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_os_mswin.c_can_end_termcap_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_PlatformId = common dso_local global i64 0, align 8
@VER_PLATFORM_WIN32_NT = common dso_local global i64 0, align 8
@Columns = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [54 x i8] c"'columns' is not 80, cannot execute external commands\00", align 1
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @can_end_termcap_mode(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i64, i64* @g_PlatformId, align 8
  %5 = load i64, i64* @VER_PLATFORM_WIN32_NT, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @Columns, align 4
  %9 = icmp eq i32 %8, 80
  br i1 %9, label %10, label %12

10:                                               ; preds = %7, %1
  %11 = load i32, i32* @TRUE, align 4
  store i32 %11, i32* %2, align 4
  br label %20

12:                                               ; preds = %7
  %13 = load i32, i32* %3, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %12
  %16 = call i32 @_(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0))
  %17 = call i32 @msg(i32 %16)
  br label %18

18:                                               ; preds = %15, %12
  %19 = load i32, i32* @FALSE, align 4
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %18, %10
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @msg(i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
